instagram icon added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <!--nav icons-->
     <ul class="nav-icons">
+      
       <!--single icon-->
       <li>
         <a href="https://www.twitter.com" target="_blank" class="nav-icon">
@@ -71,6 +72,12 @@
       <li>
         <a href="https://www.twitter.com" target="_blank" class="nav-icon">
           <i class="fab fa-twitter"></i></a>
+      </li>
+      <!--end of single icon-->
+      <!--single icon-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" class="nav-icon">
+          <i class="fab fa-instagram"></i></a>
       </li>
       <!--end of single icon-->
       <!--single icon-->
