--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
       <!--single icon-->
       <li>
         <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+          <i class="fab fa-instagram"></i></a>
+      </li>
+      <!--end of single icon-->
+      <!--single icon-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" class="footer-icon">
           <i class="fab fa-squarespace"></i></a>
       </li>
       <!--end of single icon-->
